--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch-sass": "node-sass sass/main.scss css/style.css -w",
     "compile-sass": "node-sass sass/main.scss css/style.css",
     "concat-css": "*** just in case we have more than one file ***",
-    "prefix-css": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.prefix.css",
+    "prefix-css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.css -o css/style.prefix.css",
     "compress-css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build-css": "npm-run-all compile-sass prefix-css compress-css"
   },
